<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/login_signin_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/login_signin_button" />

    <EditText
        android:id="@+id/login_username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_username"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/login_username" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_signin_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:text="@string/login_signup_text" />

    <Button
        android:id="@+id/login_signup_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/login_signin_button"
        android:layout_below="@+id/TextView02"
        android:layout_marginTop="23dp"
        android:text="@string/login_signup_button" />

    <TextView
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/logo"
        android:layout_below="@+id/logo"
        android:layout_marginTop="50dp"
        android:text="@string/login_username" />

    <TextView
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_username"
        android:layout_below="@+id/login_username_input"
        android:layout_marginTop="25dp"
        android:text="@string/login_password" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_username_input"
        android:layout_below="@+id/login_password"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

</RelativeLayout>
